sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:33: error: not found: value nb_echnage2
 } while (nb_echange1!=0 && nb_echnage2!=0)
                            ^